RESOLVED FIXED85536
Fix coding style issues in IDBLevelDBCoding.cpp
https://bugs.webkit.org/show_bug.cgi?id=85536
Summary Fix coding style issues in IDBLevelDBCoding.cpp
Joshua Bell
Reported 2012-05-03 13:05:13 PDT
Fix coding style issues in IDBLevelDBCoding.cpp
Attachments
Patch (9.10 KB, patch)
2012-05-03 13:05 PDT, Joshua Bell
no flags
Joshua Bell
Comment 1 2012-05-03 13:05:55 PDT
Joshua Bell
Comment 2 2012-05-03 13:06:17 PDT
tony@ - r?
WebKit Review Bot
Comment 3 2012-05-03 15:41:00 PDT
Comment on attachment 140075 [details] Patch Clearing flags on attachment: 140075 Committed r116028: <http://trac.webkit.org/changeset/116028>
WebKit Review Bot
Comment 4 2012-05-03 15:41:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.