Fix coding style issues in IDBLevelDBCoding.cpp https://bugs.webkit.org/show_bug.cgi?id=85536

Reviewed by Tony Chang.

No tests - just code formatting changes.

* Modules/indexeddb/IDBLevelDBCoding.cpp:
(WebCore::IDBLevelDBCoding::encodeIDBKey):
(WebCore::IDBLevelDBCoding::decodeIDBKey):
(WebCore::IDBLevelDBCoding::extractEncodedIDBKey):
(WebCore::IDBLevelDBCoding::compareEncodedIDBKeys):


Canonical link: https://commits.webkit.org/103101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116028 268f45cc-cd09-0410-ab3c-d52691b4dbfc